labelled some areas in HTML

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     />
     <title>Landing | Tailwind Starter Kit by Creative Tim</title>
   </head>
+  <!-- BODY -->
   <body class="text-gray-800 antialiased">
+    <!-- NAVBAR -->
     <nav
       class="top-0 absolute z-50 w-full flex flex-wrap items-center justify-between px-2 py-3 navbar-expand-lg"
     >
@@ -64,7 +66,7 @@
                 class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
                 href="#pablo"
                 ><i
-                  class="lg:text-gray-300 text-gray-500 fab fa-facebook text-lg leading-lg "
+                  class="lg:text-gray-300 text-gray-500 fab fa-facebook text-lg leading-lg"
                 ></i
                 ><span class="lg:hidden inline-block ml-2">Share</span></a
               >
@@ -74,7 +76,7 @@
                 class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
                 href="#pablo"
                 ><i
-                  class="lg:text-gray-300 text-gray-500 fab fa-twitter text-lg leading-lg "
+                  class="lg:text-gray-300 text-gray-500 fab fa-twitter text-lg leading-lg"
                 ></i
                 ><span class="lg:hidden inline-block ml-2">Tweet</span></a
               >
@@ -84,7 +86,7 @@
                 class="lg:text-white lg:hover:text-gray-300 text-gray-800 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
                 href="#pablo"
                 ><i
-                  class="lg:text-gray-300 text-gray-500 fab fa-github text-lg leading-lg "
+                  class="lg:text-gray-300 text-gray-500 fab fa-github text-lg leading-lg"
                 ></i
                 ><span class="lg:hidden inline-block ml-2">Star</span></a
               >
@@ -93,7 +95,7 @@
               <button
                 class="bg-white text-gray-800 active:bg-gray-100 text-xs font-bold uppercase px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none lg:mr-1 lg:mb-0 ml-3 mb-3"
                 type="button"
-                style="transition: all 0.15s ease 0s;"
+                style="transition: all 0.15s ease 0s"
               >
                 <i class="fas fa-arrow-alt-circle-down"></i> Download
               </button>
@@ -102,14 +104,18 @@
         </div>
       </div>
     </nav>
+    <!-- MAIN SECTION -->
     <main>
+      <!-- HERO IMAGE -->
       <div
         class="relative pt-16 pb-32 flex content-center items-center justify-center"
-        style="min-height: 75vh;"
+        style="min-height: 75vh"
       >
         <div
           class="absolute top-0 w-full h-full bg-center bg-cover"
-          style='background-image: url("https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1267&amp;q=80");'
+          style="
+            background-image: url('https://images.unsplash.com/photo-1557804506-669a67965ba0?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1267&amp;q=80');
+          "
         >
           <span
             id="blackOverlay"
@@ -134,7 +140,7 @@
         </div>
         <div
           class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden"
-          style="height: 70px; transform: translateZ(0px);"
+          style="height: 70px; transform: translateZ(0px)"
         >
           <svg
             class="absolute bottom-0 overflow-hidden"
@@ -152,6 +158,7 @@
           </svg>
         </div>
       </div>
+      <!-- BELOW HERO -->
       <section class="pb-20 bg-gray-300 -mt-24">
         <div class="container mx-auto px-4">
           <div class="flex flex-wrap">
@@ -255,7 +262,7 @@
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 583 95"
                     class="absolute left-0 w-full block"
-                    style="height: 95px; top: -94px;"
+                    style="height: 95px; top: -94px"
                   >
                     <polygon
                       points="-30,95 583,95 583,65"
@@ -279,7 +286,7 @@
       <section class="relative py-20">
         <div
           class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
-          style="height: 80px; transform: translateZ(0px);"
+          style="height: 80px; transform: translateZ(0px)"
         >
           <svg
             class="absolute bottom-0 overflow-hidden"
@@ -385,7 +392,7 @@
                   alt="..."
                   src="./assets/img/team-1-800x800.jpg"
                   class="shadow-lg rounded-full max-w-full mx-auto"
-                  style="max-width: 120px;"
+                  style="max-width: 120px"
                 />
                 <div class="pt-6 text-center">
                   <h5 class="text-xl font-bold">Ryan Tompson</h5>
@@ -419,7 +426,7 @@
                   alt="..."
                   src="./assets/img/team-2-800x800.jpg"
                   class="shadow-lg rounded-full max-w-full mx-auto"
-                  style="max-width: 120px;"
+                  style="max-width: 120px"
                 />
                 <div class="pt-6 text-center">
                   <h5 class="text-xl font-bold">Romina Hadid</h5>
@@ -448,7 +455,7 @@
                   alt="..."
                   src="./assets/img/team-3-800x800.jpg"
                   class="shadow-lg rounded-full max-w-full mx-auto"
-                  style="max-width: 120px;"
+                  style="max-width: 120px"
                 />
                 <div class="pt-6 text-center">
                   <h5 class="text-xl font-bold">Alexa Smith</h5>
@@ -482,7 +489,7 @@
                   alt="..."
                   src="./assets/img/team-4-470x470.png"
                   class="shadow-lg rounded-full max-w-full mx-auto"
-                  style="max-width: 120px;"
+                  style="max-width: 120px"
                 />
                 <div class="pt-6 text-center">
                   <h5 class="text-xl font-bold">Jenna Kardi</h5>
@@ -521,7 +528,7 @@
       <section class="pb-20 relative block bg-gray-900">
         <div
           class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
-          style="height: 80px; transform: translateZ(0px);"
+          style="height: 80px; transform: translateZ(0px)"
         >
           <svg
             class="absolute bottom-0 overflow-hidden"
@@ -614,7 +621,7 @@
                       type="text"
                       class="px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:shadow-outline w-full"
                       placeholder="Full Name"
-                      style="transition: all 0.15s ease 0s;"
+                      style="transition: all 0.15s ease 0s"
                     />
                   </div>
                   <div class="relative w-full mb-3">
@@ -626,7 +633,7 @@
                       type="email"
                       class="px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded text-sm shadow focus:outline-none focus:shadow-outline w-full"
                       placeholder="Email"
-                      style="transition: all 0.15s ease 0s;"
+                      style="transition: all 0.15s ease 0s"
                     />
                   </div>
                   <div class="relative w-full mb-3">
@@ -645,7 +652,7 @@
                     <button
                       class="bg-gray-900 text-white active:bg-gray-700 text-sm font-bold uppercase px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1"
                       type="button"
-                      style="transition: all 0.15s ease 0s;"
+                      style="transition: all 0.15s ease 0s"
                     >
                       Send Message
                     </button>
@@ -660,7 +667,7 @@
     <footer class="relative bg-gray-300 pt-8 pb-6">
       <div
         class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
-        style="height: 80px; transform: translateZ(0px);"
+        style="height: 80px; transform: translateZ(0px)"
       >
         <svg
           class="absolute bottom-0 overflow-hidden"
@@ -805,8 +812,8 @@
   </body>
   <script>
     function toggleNavbar(collapseID) {
-      document.getElementById(collapseID).classList.toggle("hidden");
-      document.getElementById(collapseID).classList.toggle("block");
+      document.getElementById(collapseID).classList.toggle('hidden');
+      document.getElementById(collapseID).classList.toggle('block');
     }
   </script>
 </html>
