--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           class="w-full relative flex justify-between lg:w-auto lg:static lg:block lg:justify-start"
         >
           <a
-            class="text-sm font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap uppercase text-white"
+            class="text-lg font-bold leading-relaxed inline-block mr-4 py-2 whitespace-no-wrap uppercase text-white"
             href="https://www.creative-tim.com/learning-lab/tailwind-starter-kit#/presentation"
             ><span class="text-green-500">Blossom</span> Architecture</a
           ><button
@@ -49,6 +49,7 @@
           id="example-collapse-navbar"
         >
           <ul class="flex flex-col lg:flex-row list-none lg:ml-auto">
+            <!-- ICON 1 -->
             <li class="flex items-center">
               <a
                 class="lg:text-white lg:hover:text-gray-300 text-green-500 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
@@ -59,6 +60,7 @@
                 ><span class="lg:hidden inline-block ml-2">Facebook</span></a
               >
             </li>
+            <!-- ICON 2 -->
             <li class="flex items-center">
               <a
                 class="lg:text-white lg:hover:text-green-500 text-green-500 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
@@ -69,14 +71,15 @@
                 ><span class="lg:hidden inline-block ml-2">Twitter</span></a
               >
             </li>
+            <!-- ICON 3 -->
             <li class="flex items-center">
               <a
                 class="lg:text-white lg:hover:text-green-500 text-green-500 px-3 py-4 lg:py-2 flex items-center text-xs uppercase font-bold"
                 href="#pablo"
                 ><i
-                  class="lg:text-green-500 text-green-500 fab fa-github text-lg leading-lg text-2xl"
+                  class="lg:text-green-500 text-green-500 fab fa-linkedin text-lg leading-lg text-2xl"
                 ></i
-                ><span class="lg:hidden inline-block ml-2">Github</span></a
+                ><span class="lg:hidden inline-block ml-2">Linkedin</span></a
               >
             </li>
           </ul>
@@ -106,7 +109,8 @@
             <div class="w-full lg:w-6/12 px-4 ml-auto mr-auto text-center">
               <div class="pr-12">
                 <h1 class="text-white font-semibold text-4xl">
-                  Building our <span class="text-green-500">green</span> future.
+                  Building your
+                  <span class="text-green-500">green</span> future.
                 </h1>
                 <p class="mt-4 text-lg text-gray-300">
                   From renewable energy to smart cities, we're here for you to
