Finished tagging HTML

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </svg>
         </div>
       </div>
-      <!-- BELOW HERO -->
+      <!-- SECTION ONE -->
       <section class="pb-20 bg-gray-300 -mt-24">
         <div class="container mx-auto px-4">
           <div class="flex flex-wrap">
@@ -265,6 +265,7 @@
           </div>
         </div>
       </section>
+      <!-- SECTION 2 -->
       <section class="relative py-20">
         <div
           class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
@@ -355,6 +356,7 @@
           </div>
         </div>
       </section>
+      <!-- SECTION THREE -->
       <section class="pt-20 pb-48">
         <div class="container mx-auto px-4">
           <div class="flex flex-wrap justify-center text-center mb-24">
@@ -507,6 +509,7 @@
           </div>
         </div>
       </section>
+      <!-- SECTION FOUR -->
       <section class="pb-20 relative block bg-gray-900">
         <div
           class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
@@ -582,6 +585,7 @@
           </div>
         </div>
       </section>
+      <!-- FORM -->
       <section class="relative block py-24 lg:pt-0 bg-gray-900">
         <div class="container mx-auto px-4">
           <div class="flex flex-wrap justify-center lg:-mt-64 -mt-48">
@@ -646,6 +650,7 @@
         </div>
       </section>
     </main>
+    <!-- FOOTER -->
     <footer class="relative bg-gray-300 pt-8 pb-6">
       <div
         class="bottom-auto top-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden -mt-20"
