Removed slant on hero

--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
             </div>
           </div>
         </div>
-        <div
+        <!-- SLANT -->
+        <!--<div
           class="top-auto bottom-0 left-0 right-0 w-full absolute pointer-events-none overflow-hidden"
           style="height: 70px; transform: translateZ(0px)"
         >
@@ -138,7 +139,7 @@
               points="2560 0 2560 100 0 100"
             ></polygon>
           </svg>
-        </div>
+        </div>-->
       </div>
       <!-- SECTION ONE -->
       <section class="pb-20 bg-gray-300 -mt-24">
