--- a/index.html
+++ b/index.html
@@ -142,23 +142,24 @@
         </div>-->
       </div>
       <!-- SECTION ONE -->
-      <section class="pb-20 bg-gray-300 -mt-24">
+      <section class="pb-20 bg-gray-300 -mt-20">
         <div class="container mx-auto px-4">
           <div class="flex flex-wrap">
-            <div class="lg:pt-12 pt-6 w-full md:w-4/12 px-4 text-center">
+            <div class="w-full md:w-4/12 px-4 text-center">
               <div
                 class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg"
               >
                 <div class="px-4 py-5 flex-auto">
                   <div
-                    class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-red-400"
+                    class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-green-500"
                   >
-                    <i class="fas fa-award"></i>
+                    <i class="fas fa-tree"></i>
                   </div>
-                  <h6 class="text-xl font-semibold">Awarded Agency</h6>
+                  <h6 class="text-xl font-semibold">A Green Future</h6>
                   <p class="mt-2 mb-4 text-gray-600">
-                    Divide details about your product or agency work into parts.
-                    A paragraph describing a feature will be enough.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Illo dolorum veritatis nesciunt distinctio sed, a beatae
+                    commodi perspiciatis explicabo aut!
                   </p>
                 </div>
               </div>
@@ -169,32 +170,36 @@
               >
                 <div class="px-4 py-5 flex-auto">
                   <div
-                    class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-blue-400"
+                    class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-yellow-600"
                   >
-                    <i class="fas fa-retweet"></i>
+                    <i class="fas fa-tram"></i>
                   </div>
-                  <h6 class="text-xl font-semibold">Free Revisions</h6>
+                  <h6 class="text-xl font-semibold">Electric Transport</h6>
                   <p class="mt-2 mb-4 text-gray-600">
-                    Keep you user engaged by providing meaningful information.
-                    Remember that by this time, the user is curious.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Alias provident mollitia omnis ducimus eos facilis, neque
+                    temporibus quia corporis, harum voluptas, possimus
+                    perspiciatis officiis ipsum. Distinctio, est dolorem. Ut,
+                    similique.
                   </p>
                 </div>
               </div>
             </div>
-            <div class="pt-6 w-full md:w-4/12 px-4 text-center">
+            <div class="w-full md:w-4/12 px-4 text-center">
               <div
                 class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg"
               >
                 <div class="px-4 py-5 flex-auto">
                   <div
-                    class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-green-400"
+                    class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-blue-500"
                   >
-                    <i class="fas fa-fingerprint"></i>
+                    <i class="fas fa-user-friends"></i>
                   </div>
-                  <h6 class="text-xl font-semibold">Verified Company</h6>
+                  <h6 class="text-xl font-semibold">Sustainable Living</h6>
                   <p class="mt-2 mb-4 text-gray-600">
-                    Write a few lines about each one. A paragraph describing a
-                    feature will be enough. Keep you user engaged!
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Magni blanditiis, quisquam sunt possimus eveniet id quaerat
+                    laborum fugit libero tempore?
                   </p>
                 </div>
               </div>
